tests/test_assets/semantic/invalid/void_values/index_expression.cog
does_nothing::() -> void {
}

test::() -> void {
    values: i32[3];

    value := values[does_nothing()];
}