tests/test_assets/semantic/invalid/void_values/index_expression.expected
semantic error at line 7: expression does not produce a value
1 semantic error generated.
